@@ -5,7 +5,7 @@ This is a test
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFLzGI2E5AAG/mbdVIRArRuAJ0Q8li5AKuCYRmk77vfApHR7uqdFgCgkeFD
-KYCJfZvg03Fx1mrFu4v78Bk=
-=sLkH
+iD8DBQFL++z2E5AAG/mbdVIRApHRAKCfdPNRuQOkgJ3UKZM1/IhhU7ErsQCcDAvt
+sqhKSSiR0CGVIdclIn7QAzE=
+=gTdT
 -----END PGP SIGNATURE-----
